test/functions/iterators/bradc/iteratorBadError.good
iteratorBadError.chpl:1: In iterator 'itr':
iteratorBadError.chpl:2: error: 'startval' undeclared (first use this function)
